[FIX] Elevada la capa que ocupa el menu navegador (z-index) superior para que no se solapará con el filtro de ofertas

--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -12,7 +12,7 @@
   background: $primaryWhite;
   justify-content: center;
   align-items: center;
-  z-index:2;
+  z-index: 3;
   &_menu {
     li {
       cursor: pointer;
